# ht

./: README.md
housetab-client/: housetab-client.cabal  stack.yaml
housetab-client/src/: Ledger.hs  Main.hs
housetab-client/static/: site.css  site.js
housetab-client/templates/: add.tpl  bal.tpl  base.tpl  index.tpl  reg.tpl  settings.tpl  src.tpl
housetab-server/: housetab-server.cabal  stack.yaml
housetab-server/src/: Main.hs
html/: balances.html  index.html  ledger.html  reg.html  settings.html  site.css  site.js
