name:                housetab-client
version:             0.1.0.0
synopsis:            ...
description:         Please see README.md
homepage:            http://github.com/dbp/ht#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson <dbp@dbpmail.net>
maintainer:          Daniel Patterson <dbp@dbpmail.net>
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable housetab-client
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fn
                     , fn-extra
                     , wai
                     , warp
                     , http-types
                     , text
                     , lens
                     , lens-aeson
                     , uuid
                     , heist
                     , directory
                     , logging
                     , xmlhtml
  default-language:    Haskell2010

test-suite housetab-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/ht
