name:                housetab-server
version:             0.1.0.0
synopsis:            ...
description:         Please see README.md
homepage:            http://github.com/dbp/ht#readme
license:             ISC
license-file:        LICENSE
author:              Daniel Pattersion <dbp@dbpmail.net>
maintainer:          Daniel Pattersion <dbp@dbpmail.net>
copyright:           2015 Daniel Patterson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable housetab-server
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fn
                     , logging
                     , warp
                     , http-types
                     , wai
                     , text
                     , lens
                     , uuid
                     , hedis
                     , lens-aeson
  default-language:    Haskell2010

test-suite housetab-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , housetab-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/ht
